--- a/scss/styles.css
+++ b/scss/styles.css
@@ -112,6 +112,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .proizvodi .image1 img,
